Fix unsafe use of transactions in Cypher export